force-app/main/default/objects/Costo_de_Exportacion__c/fields/Costo__c.field-meta.xml
<CustomField>
    <fullName>Costo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Costo</label>
    <referenceTo>Costo__c</referenceTo>
    <relationshipLabel>Costos de Exportación</relationshipLabel>
    <relationshipName>Costos_de_Exportaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>