force-app/main/default/objects/Costo_de_Exportacion__c/fields/DDP__c.field-meta.xml
<CustomField>
    <fullName>DDP__c</fullName>
    <formula>Guias_de_Exportacion__r.DDP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DDP</label>
    <type>Checkbox</type>
</CustomField>