force-app/main/default/objects/Costo_de_Exportacion__c/fields/Factura__c.field-meta.xml
<CustomField>
    <fullName>Factura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factura</label>
    <referenceTo>Factura__c</referenceTo>
    <relationshipLabel>Costos de Exportación Facturados</relationshipLabel>
    <relationshipName>Costos_de_Exportaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>