force-app/main/default/objects/Costo_de_Exportacion__c/fields/Guias_de_Exportacion__c.field-meta.xml
<CustomField>
    <fullName>Guias_de_Exportacion__c</fullName>
    <label>Guías de Exportación</label>
    <referenceTo>Guias_de_Exportacion__c</referenceTo>
    <relationshipName>Costos_Asociados</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>