force-app/main/default/objects/Costo_de_Exportacion__c/fields/NombreCosto__c.field-meta.xml
<CustomField>
    <fullName>NombreCosto__c</fullName>
    <formula>Costo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NombreCosto</label>
    <type>Text</type>
</CustomField>